# secretary

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  HANDOFF.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  onboard.py  prd.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
alembic/: env.py
alembic/versions/: 1f9df8e705db_initial_schema.py  613ef3889d69_add_undo_expiry_minutes_and_ai_context_.py  be46ce80f932_tighten_action_log_entity_type.py
docs/adr/: 0001-auto-deploy-master-to-dogfood-instance.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
secretary/: main.py
secretary/ai/: __init__.py  approval.py  client.py  conversation.py  executor.py  system_prompt.py  tools.py  validation.py
secretary/ai/tools/: __init__.py  _schema.py  _types.py  event_tools.py  system_tools.py  task_tools.py
secretary/bot/: formatters.py  keyboards.py  middleware.py  setup.py  states.py
secretary/calendar_sync/: __init__.py  caldav_client.py  google.py  sync.py
secretary/config/: settings.py
secretary/core/: action_log.py  actions.py  events.py  inbox.py  schemas.py  settings.py  tasks.py
secretary/db/: base.py  models.py  session.py
secretary/scheduler/: __init__.py  briefings.py  calendar_job.py  expiry.py  notifications.py  setup.py
secretary/transcription/: audio.py  base.py  whisper_cloud.py  whisper_local.py
secretary/web/: app.py
tests/: conftest.py  test_actions.py  test_approval.py  test_core.py  test_inbox.py  test_schemas.py  test_tool_registry.py
(+25 files in other folders)
