[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["secretary*"]

[project]
name = "secretary"
version = "0.1.0"
description = "Self-hosted, model-agnostic AI personal secretary"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # Telegram bot
    "aiogram>=3.15",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.21",
    "alembic>=1.15",
    # LLM
    "litellm>=1.60",
    # Web UI
    "jinja2>=3.1",
    # Scheduling
    "apscheduler>=3.10,<4",
    # Calendar
    "caldav>=1.4",
    "google-api-python-client>=2.160",
    "google-auth-oauthlib>=1.2",
    # Transcription
    "faster-whisper>=1.1",
    "openai>=1.60",
    # Audio
    "pydub>=0.25",
    # Config
    "pydantic-settings>=2.7",
    # HTTP client
    "httpx>=0.28.1",
    # Form parsing
    "python-multipart>=0.0.9",
    # Onboarding wizard
    "InquirerPy>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [".claude"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
